src/core/status/ui/snapshots/clikd__core__status__ui__draw_blocks__tests__draw_blocks_whole_layout_with_filter_bar.snap
---
source: src/core/status/ui/draw_blocks.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) show help   "
"╭ Containers 1/1 - filtered ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 hour   03.00%   30.00 kB / 30.00 kB          1   image_1   0.00 kB   0.00 kB                                ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│                                                                                                                                              ││  restart     │"
"│                                                                                                                                              ││  stop        │"
"│                                                                                                                                              ││  delete      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────╯"
"╭ Logs 3/3 - container_1 - image_1 ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  line 1                                                                                                                                                      │"
"│  line 2                                                                                                                                                      │"
"│▶ line 3                                                                                                                                                      │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭───────────────────────── cpu 03.00% ──────────────────────────╮╭─────────────────────── memory 30.00 kB ───────────────────────╮╭────────── ports ───────────╮"
"│10.00%│      •••                                               ││100.00 kB│      ••                                             ││       ip   private   public│"
"│      │    ••  •                                               ││         │    •• •                                             ││               8001         │"
"│      │ •••     • •                                            ││         │ •••    • •                                          ││                            │"
"│      │•        ••                                             ││         │•       ••                                           ││                            │"
"│      │                                                        ││         │                                                     ││                            │"
"╰───────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────╯╰────────────────────────────╯"
" Esc  clear  ← by →   Name  Image  Status  All  filter term: r_1                                                                                                "
